changed queue visiblity timeout

--- a/cf-templates/common-resource.yaml
+++ b/cf-templates/common-resource.yaml
@@ -29,3 +29,5 @@ Resources:
     Type: AWS::SQS::Queue
     Properties:
       QueueName: NotificationQueue
+      VisibilityTimeout: 65
+      MessageRetentionPeriod: 86400
