--- a/cf-templates/booking-and-payment.yaml
+++ b/cf-templates/booking-and-payment.yaml
@@ -1,13 +1,258 @@
-// lambda (bookings)
 
-// role for paymentsHandler
+AWSTemplateFormatVersion: '2010-09-09'
+Description: This template will create iam roles, lambdas, and queue for the bookings and payment handling.
+Parameters:
+  ResourceBucket:
+    Type: String
+  LambdaCodeKey:
+    Type: String
+    Description: S3 key of the Lambda deployment package
+  NodeLayerARN:
+    Type: String
+    Description: ARN of the node module layer
+  AppConsoleUrl:
+    Type: String
+    Description: Console url
+  NotificationQueueARN:
+    Type: String
+    Description: ARN of notification queue.
+  NotificationQueueUrl:
+    Type: String
+    Description: notification queue url.
+  BusesARN:
+    Type: String
+    Description: ARN of the bus data saved ddb table.
+Outputs:
+  SeatUnlockerQueueARN:
+    Description: ARN of the seats unlock requset queue.
+    Value: !GetAtt SeatUnlockerQueue.Arn
+  PaymentsARN:
+    Description: ARN of the payments saved table.
+    Value: !GetAtt Payments.Arn
+Resources:
+  SeatUlockerQueue:
+    Type: AWS::SQS::Queue
+    Properties:
+      QueueName: SeatUlockerQueue
+      VisibilityTimeout: 65
+      MessageRetentionPeriod: 86400
+  Payments:
+    Type: AWS::DynamoDB::Table
+    Properties:
+      TableName: Payments
+      AttributeDefinitions:
+        - AttributeName: id
+          AttributeType: S
+      BillingMode: PAY_PER_REQUEST
+      KeySchema:
+        - AttributeName: id
+          KeyType: HASH
+  BookingLambdaExecutionRole:
+    Type: AWS::IAM::Role
+    Properties:
+      RoleName: BookingLambdaExecutionRole
+      Description: This role give permissions for lambda to execute certain action on dynamodb.
+      AssumeRolePolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+          - Action:
+              - sts:AssumeRole
+            Effect: Allow
+            Principal:
+              Service:
+                - lambda.amazonaws.com
+      ManagedPolicyArns:
+        - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
+      Policies:
+        - PolicyName: DynamodbAccess
+          PolicyDocument:
+            Version: 2012-10-17
+            Statement:
+              - Sid: DynamodbAccess
+                Effect: Allow
+                Action:
+                  - dynamodb:GetItem
+                  - dynamodb:BatchGetItem
+                  - dynamodb:ConditionCheckItem
+                  - dynamodb:DescribeTable
+                  - dynamodb:GetRecords
+                  - dynamodb:Query
+                  - dynamodb:Scan
+                  - dynamodb:BatchWriteItem
+                  - dynamodb:DeleteItem
+                  - dynamodb:PutItem
+                  - dynamodb:UpdateItem
+                Resource:
+                  - !Ref BusesARN
+  BookingLambda:
+    Type: AWS::Lambda::Function
+    Properties:
+      FunctionName: BookingLambda
+      Description: This lambda will invoke defined in lib/lambda/api/seat-booking.js.
+      Code:
+        S3Bucket: !Ref ResourceBucket
+        S3Key: !Ref LambdaCodeKey
+      MemorySize: 1024
+      Handler: lib/lambda/api/seat-booking.handler
+      Timeout: 60
+      Runtime: nodejs22.x
+      Role: !GetAtt BookingLambdaExecutionRole.Arn
+      Layers:
+        - !Ref NodeLayerARN
+      Environment:
+        Variables:
+          AWS_ACCOUNT_ID: !Ref AWS::AccountId
+          APP_CONSOLE_URL: !Ref AppConsoleUrl
+          SEAT_UNLOCKER_QUEUE: !GetAtt SeatUnlockerQueue.QueueArn
+  PaymentHandleLambdaExecutionRole:
+    Type: AWS::IAM::Role
+    Properties:
+      RoleName: PaymentHandleLambdaExecutionRole
+      Description: This role give permissions for lambda to execute certain action on dynamodb,SQS,.
+      AssumeRolePolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+          - Action:
+              - sts:AssumeRole
+            Effect: Allow
+            Principal:
+              Service:
+                - lambda.amazonaws.com
+      ManagedPolicyArns:
+        - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
+      Policies:
+        - PolicyName: DynamodbAccess
+          PolicyDocument:
+            Version: 2012-10-17
+            Statement:
+              - Sid: DynamodbAccess
+                Effect: Allow
+                Action:
+                  - dynamodb:GetItem
+                  - dynamodb:BatchGetItem
+                  - dynamodb:ConditionCheckItem
+                  - dynamodb:DescribeTable
+                  - dynamodb:GetRecords
+                  - dynamodb:Query
+                  - dynamodb:Scan
+                  - dynamodb:BatchWriteItem
+                  - dynamodb:DeleteItem
+                  - dynamodb:PutItem
+                  - dynamodb:UpdateItem
+                Resource:
+                  - !Ref BusesARN
+                  - !GetAtt Payments.Arn
+        - PolicyName: SQSAccess
+          PolicyDocument:
+            Version: 2012-10-17
+            Statement:
+              - Sid: SQSAccess
+                Effect: Allow
+                Action:
+                  - sqs:SendMessage
+                  - sqs:DeleteMessage
+                  - sqs:PurgeQueue
+                Resource:
+                  - !Ref NotificationQueueARN
+  PaymentHandleInvokerLambda:
+    Type: AWS::Lambda::Function
+    Properties:
+      FunctionName: PaymentHandleInvokerLambda
+      Description: This lambda will invoke defined in lib/invokers/payment-handler.js.
+      Code:
+        S3Bucket: !Ref ResourceBucket
+        S3Key: !Ref LambdaCodeKey
+      MemorySize: 1024
+      Handler: lib/invokers/payment-handler.handler
+      Timeout: 60
+      Runtime: nodejs22.x
+      Role: !GetAtt PaymentHandleLambdaExecutionRole.Arn
+      Layers:
+        - !Ref NodeLayerARN
+      Environment:
+        Variables:
+          AWS_ACCOUNT_ID: !Ref AWS::AccountId
+          APP_CONSOLE_URL: !Ref AppConsoleUrl
+          NOTIFICATION_QUEUE: !Ref NotificationQueueUrl
+  SeatsUnlockInvokerExecutionRole:
+    Type: AWS::IAM::Role
+    Properties:
+      RoleName: SeatsUnlockInvokerExecutionRole
+      Description: This role give permissions for lambda to execute certain action on dynamodb.
+      AssumeRolePolicyDocument:
+        Version: '2012-10-17'
+        Statement:
+          - Action:
+              - sts:AssumeRole
+            Effect: Allow
+            Principal:
+              Service:
+                - lambda.amazonaws.com
+      ManagedPolicyArns:
+        - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
+        - arn:aws:iam::aws:policy/service-role/AWSLambdaSQSQueueExecutionRole
+      Policies:
+        - PolicyName: DynamodbAccess
+          PolicyDocument:
+            Version: 2012-10-17
+            Statement:
+              - Sid: DynamodbAccess
+                Effect: Allow
+                Action:
+                  - dynamodb:GetItem
+                  - dynamodb:BatchGetItem
+                  - dynamodb:ConditionCheckItem
+                  - dynamodb:DescribeTable
+                  - dynamodb:GetRecords
+                  - dynamodb:Query
+                  - dynamodb:Scan
+                  - dynamodb:BatchWriteItem
+                  - dynamodb:DeleteItem
+                  - dynamodb:PutItem
+                  - dynamodb:UpdateItem
+                Resource:
+                  - !Ref BusesARN
+  SeatsUnlockeInvokerLambda:
+    Type: AWS::Lambda::Function
+    Properties:
+      FunctionName: SeatsUnlockeInvokerLambda
+      Description: This lambda will invoke defined in lib/invokers/seats-unlocker.js.
+      Code:
+        S3Bucket: !Ref ResourceBucket
+        S3Key: !Ref LambdaCodeKey
+      MemorySize: 1024
+      Handler: lib/invokers/seats-unlocker.handler
+      Timeout: 60
+      Runtime: nodejs22.x
+      Role: !GetAtt SeatsUnlockInvokerExecutionRole.Arn
+      Layers:
+        - !Ref NodeLayerARN
+      Environment:
+        Variables:
+          AWS_ACCOUNT_ID: !Ref AWS::AccountId
+          APP_CONSOLE_URL: !Ref AppConsoleUrl
+  LambdaSQSSourceMapping:
+    Type: AWS::Lambda::EventSourceMapping
+    Properties:
+      Enabled: True
+      EventSourceArn: !Ref NotificationQueueARN
+      FunctionName: !Ref SeatsUnlockeInvokerLambda
+  BookingLambdaInvokePermission:
+    Type: AWS::Lambda::Permission
+    Properties:
+      Action: lambda:InvokeFunction
+      FunctionName: !Ref BookingLambda
+      Principal: apigateway.amazonaws.com
+  PaymentHandleInvokerLambdaInvokePermission:
+    Type: AWS::Lambda::Permission
+    Properties:
+      Action: lambda:InvokeFunction
+      FunctionName: !Ref PaymentHandleInvokerLambda
+      Principal: apigateway.amazonaws.com
+  SeatsUnlockeInvokerLambdaInvokePermission:
+    Type: AWS::Lambda::Permission
+    Properties:
+      Action: lambda:InvokeFunction
+      FunctionName: !Ref SeatsUnlockeInvokerLambda
+      Principal: sqs.amazonaws.com
 
-// invokers (lambdas) paymentsHandler, 
-
-// role for unlocker
-
-// invokers (lambdas) unlocker,
-
-// create the permissions for the apigateway to access paymentsHandler
-
-// create the permissions for the apigateway to access unlocker
