added separate post method to handle payhere callback

--- a/cf-templates/booking-and-payment.yaml
+++ b/cf-templates/booking-and-payment.yaml
@@ -39,10 +39,10 @@ Outputs:
     Description: ARN of the SeatsUnlockeInvokerLambda.
     Value: !GetAtt SeatsUnlockeInvokerLambda.Arn
 Resources:
-  SeatUlockerQueue:
+  SeatUnlockerQueue:
     Type: AWS::SQS::Queue
     Properties:
-      QueueName: SeatUlockerQueue
+      QueueName: SeatUnlockerQueue
       VisibilityTimeout: 65
       MessageRetentionPeriod: 86400
   Payments:
