--- a/cf-templates/main-stack.yaml
+++ b/cf-templates/main-stack.yaml
@@ -22,7 +22,10 @@ Outputs:
     Description: This is a resource id of GeneralProxy
   BookingProxyID:
     Value: !Ref BookingProxy
-    Description: This is a resource id of BookingProxy    
+    Description: This is a resource id of BookingProxy 
+  PayhereNotifyPostID:
+    Value: !Ref PayhereNotifyPost
+    Description: This is a resource id of PayhereNotifyPost        
   RestApiID:
     Value: !Ref BusTrackingSys
     Description: This is rest api id
@@ -65,6 +68,12 @@ Resources:
       RestApiId: !Ref BusTrackingSys
       ParentId: !GetAtt BusTrackingSys.RootResourceId
       PathPart: 'booking'
+  Payment:
+    Type: AWS::ApiGateway::Resource
+    Properties:
+      RestApiId: !Ref BusTrackingSys
+      ParentId: !GetAtt BusTrackingSys.RootResourceId
+      PathPart: 'payment'
   AuthProxy:
     Type: AWS::ApiGateway::Resource
     Properties:
@@ -89,3 +98,9 @@ Resources:
       RestApiId: !Ref BusTrackingSys
       ParentId: !Ref Booking
       PathPart: '{proxy+}'
+  PayhereNotifyPost:
+    Type: AWS::ApiGateway::Resource
+    Properties:
+      RestApiId: !Ref BusTrackingSys
+      ParentId: !Ref Payment
+      PathPart: 'payhere-notify'
