--- a/cf-templates/general-service.yaml
+++ b/cf-templates/general-service.yaml
@@ -25,6 +25,9 @@ Parameters:
   NotificationQueueUrl:
     Type: String
     Description: notification queue url.
+  FCMIntegrationARN:
+    Type: String
+    Description: FCM integration arn.  
 Outputs:
   PlatformEndpointsARN:
     Description: ARN of PlatformEndpoints saved table.
@@ -114,6 +117,7 @@ Resources:
                 Resource:
                   - !GetAtt PlatformEndpoints.Arn
                   - !GetAtt Notifications.Arn
+                  - !Ref FCMIntegrationARN
         - PolicyName: SNSAccess
           PolicyDocument:
             Version: 2012-10-17
